--- a/public/styles/inline.css
+++ b/public/styles/inline.css
@@ -53,7 +53,7 @@ body {
 .header {
   align-content: center;
   align-items: stretch;
-  background: #3f51b5;
+  background: #15e615;
   box-shadow:
     0 4px 5px 0 rgba(0, 0, 0, 0.14),
     0 2px 9px 1px rgba(0, 0, 0, 0.12),
@@ -136,8 +136,13 @@ body {
 }
 
 @keyframes rotate {
-  from { transform: rotate(0); }
-  to { transform: rotate(450deg); }
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(450deg);
+  }
 }
 
 @keyframes line {
@@ -288,7 +293,7 @@ body {
   transition: transform 0.333s cubic-bezier(0, 0, 0.21, 1) 0.05s;
 }
 
-.dialog > div {
+.dialog>div {
   padding-left: 24px;
   padding-right: 24px;
 }
@@ -411,6 +416,7 @@ body {
  */
 
 @media (max-width: 450px) {
+
   .weather-card .date,
   .weather-card .description {
     font-size: 0.9em;
