add install button

--- a/public/styles/inline.css
+++ b/public/styles/inline.css
@@ -80,6 +80,23 @@ body {
   margin: 0;
 }
 
+.header button {
+  border: none;
+  cursor: pointer;
+  height: 24px;
+  margin-right: 16px;
+  opacity: 0.54;
+  outline: none;
+  overflow: hidden;
+  text-indent: -30000px;
+  transition: opacity 0.333s cubic-bezier(0, 0, 0.21, 1);
+  width: 24px;
+}
+
+.header #butInstall {
+  background: url(/images/install.svg) center center no-repeat;
+}
+
 /**
  * Main body
  */
